add author id to statistics
